--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </tbody>
     </table>
     <script>
-        fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec")
+        fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxfQ44_O-ZZ2edhwXLx-JgkTzvsa0X4A_arkVNs-1xroQbENkV0Ei2lvg6ryL0lgEj5/exec/exec")
             .then(response => response.json())
             .then(data => {
                 const tableBody = document.querySelector("#tool-table tbody");
