--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>道具管理システム</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            background-color: white;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #007BFF;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
 </head>
 <body>
     <h1>道具リスト</h1>
-    <input type="text" id="search-box" placeholder="道具名で検索" style="margin-bottom: 10px; width: 100%; padding: 8px; font-size: 16px;">
+    <input type="text" id="search-box" placeholder="道具名で検索" style="margin-bottom: 10px; padding: 8px; font-size: 16px;">
     <table id="tool-table">
         <thead>
             <tr>
@@ -21,8 +49,14 @@
         </tbody>
     </table>
     <script>
+        // データを取得してテーブルに挿入
         fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxfQ44_O-ZZ2edhwXLx-JgkTzvsa0X4A_arkVNs-1xroQbENkV0Ei2lvg6ryL0lgEj5/exec/exec")
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.json();
+            })
             .then(data => {
                 const tableBody = document.querySelector("#tool-table tbody");
                 data.forEach(tool => {
@@ -33,15 +67,18 @@
             })
             .catch(error => console.error("データの読み込み中にエラーが発生しました:", error));
 
+        // 検索機能
         document.getElementById('search-box').addEventListener('input', function() {
             const searchTerm = this.value.toLowerCase();
             const rows = document.querySelectorAll('#tool-table tbody tr');
             rows.forEach(row => {
-                const toolName = row.cells[1].textContent.toLowerCase(); // 道具名列を検索
+                const toolName = row.cells[1].textContent.toLowerCase();
                 row.style.display = toolName.includes(searchTerm) ? '' : 'none';
             });
         });
     </script>
 </body>
 </html>
+
+
 
