--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </table>
     <script>
         // データを取得してテーブルに挿入
-        fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbziyaLHuQFCiMu-TH3Ly1Cj9qGihJtr5n0xYS9xnNHG-J7Ihy1S2PtUHql3eOTW_RGn/exec")
+        fetch("https://script.google.com/macros/s/AKfycbziyaLHuQFCiMu-TH3Ly1Cj9qGihJtr5n0xYS9xnNHG-J7Ihy1S2PtUHql3eOTW_RGn/exec")
             .then(response => {
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
