--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         label { display: block; margin-bottom: 10px; }
         button { padding: 8px 16px; background-color: #007BFF; color: #fff; border: none; cursor: pointer; }
         button:hover { background-color: #0056b3; }
+        #search-container { margin-bottom: 20px; }
+        #search-box { padding: 8px; width: 300px; }
     </style>
 </head>
 <body>
     <h1>道具管理システム</h1>
+
+    <!-- 検索機能 -->
+    <div id="search-container">
+        <input type="text" id="search-box" placeholder="道具名で検索">
+        <button id="search-button">検索</button>
+    </div>
 
     <!-- フォーム: 新しい道具を追加 -->
     <h2>新しい道具を追加</h2>
@@ -54,6 +62,21 @@
     <!-- スクリプト -->
     <script>
         const scriptUrl = "https://script.google.com/macros/s/AKfycbwnThpT8CEMF0e7dz_tgyhGr1yNJaEoXP0OKFu0Ma3jeajNvyiFd4Rtp9tXtn5yVsiV/exec";
+
+        // 検索機能
+        document.getElementById("search-button").addEventListener("click", function () {
+            const searchTerm = document.getElementById("search-box").value.toLowerCase();
+            const rows = document.querySelectorAll("#tool-table tbody tr");
+
+            rows.forEach(row => {
+                const toolName = row.cells[1].textContent.toLowerCase();
+                if (toolName.includes(searchTerm)) {
+                    row.style.display = ""; // 表示
+                } else {
+                    row.style.display = "none"; // 非表示
+                }
+            });
+        });
 
         // フォーム送信時に新しい道具を追加
         document.getElementById("add-tool-form").addEventListener("submit", function(e) {
