--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- スクリプト -->
     <script>
-        const scriptUrl = "https://script.google.com/macros/s/https:/AKfycbzQFh2EdIghzROxGhOa-qhfsztlZ6Q9nnVdK0BCXiC_hey8cri6rAISSRtGr0-nx380/exec";
+        const scriptUrl = "https://script.google.com/macros/s/AKfycbzQFh2EdIghzROxGhOa-qhfsztlZ6Q9nnVdK0BCXiC_hey8cri6rAISSRtGr0-nx380/exec";
 
         // 検索機能
         document.getElementById("search-button").addEventListener("click", function () {
