--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Apps Script APIテスト</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>道具管理システム</title>
 </head>
 <body>
-    <h1>Google Apps Script APIテスト</h1>
-    <script>
-        const scriptUrl = "https://script.google.com/macros/s/AKfycbzDN3KNQY1HKiRziZZabbQXw9I2u16p_9h9_Ibd9dbT6py_1sZEF1hde6Mae5BmBJ6P/exec";
+  <h1>道具管理システム</h1>
+  <script>
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbyhkWprLmW80ZrlNZaRx4S1flDeLwodXMu8LbG7AgoemIQOsKGOont5UkLZQtBcWDrT/exec"; // 最新のデプロイURLに置き換えてください
 
-        // GETリクエストの例
-        fetch(scriptUrl)
-            .then(response => response.json())
-            .then(data => console.log("GET Response:", data))
-            .catch(error => console.error("GET Error:", error));
+    // GETリクエスト
+    fetch(scriptUrl)
+      .then(response => response.json())
+      .then(data => console.log("GET Response:", data))
+      .catch(error => console.error("GET Error:", error));
 
-        // POSTリクエストの例
-        fetch(scriptUrl, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ name: "test", value: 123 })
-        })
-            .then(response => response.json())
-            .then(data => console.log("POST Response:", data))
-            .catch(error => console.error("POST Error:", error));
-    </script>
+    // POSTリクエスト
+    fetch(scriptUrl, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ category: "工具", name: "ハンマー", stock: 50 })
+    })
+      .then(response => response.json())
+      .then(data => console.log("POST Response:", data))
+      .catch(error => console.error("POST Error:", error));
+  </script>
 </body>
 </html>
